fixed z-index for dropdown, changed css for explore and stats, and fixed cube sizing

--- a/closed_land/src/Pages/LandingPage/LandingPage.css
+++ b/closed_land/src/Pages/LandingPage/LandingPage.css
@@ -177,6 +177,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  z-index: 10000 !important;
 }
 
 #h1Stats {
